<resources>
    <!-- General -->
    <string name="app_name">Racer</string>
    <string name="logo">Logo</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="residence">Residence</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="loading">Loading</string>
    <string name="championships">Championships</string>
    <string name="championship">Championship</string>
    <string name="cars">Cars</string>
    <string name="car">Car</string>
    <string name="pilots">Pilots</string>
    <string name="pilot">Pilot</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="forum">Forum</string>
    <string name="account">Account</string>
    <string name="id">Id</string>
    <string name="edit">Edit</string>
    <string name="role">Role</string>
    <string name="unknown">Unknown</string>
    <string name="sign_out">Sign out</string>
    <string name="circuits">Circuits</string>
    <string name="circuit">Circuit</string>
    <string name="more_info">More info</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="point">Point</string>
    <string name="points">Points</string>
    <string name="subscription">Subscription</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="ranking">Ranking</string>
    <string name="admin">Admin</string>
    <string name="save">Save</string>
    <string name="value">Value</string>
    <string name="date">Date</string>

    <!-- User Role -->
    <string name="user_role_standard">Standard</string>
    <string name="user_role_admin">Admin</string>

    <!-- User Gender -->
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="user_gender_unknown">Unknown</string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_unauthorized">Wrong username or password</string>
    <string name="no_account">I don\'t have an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_success">Sign in succeeded</string>
    <string name="sign_in_automatic">Welcome back</string>

    <!-- Sign Out -->
    <string name="sign_out_question">Are you sure you want to sign out?</string>
    <string name="sign_out_success">Sign out succeeded</string>

    <!-- Sign Up -->
    <string name="sign_up">Sign Up</string>
    <string name="favorite_number">Favorite number</string>
    <string name="favorite_car">Favorite car</string>
    <string name="favorite_circuit">Favorite circuit</string>
    <string name="hated_circuit">Hated circuit</string>
    <string name="accept_eula"><u>Accept terms &amp; conditions</u></string>
    <string-array name="user_genders_array">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="warning_empty_username">Fill username field</string>
    <string name="warning_empty_email">Fill email field</string>
    <string name="warning_invalid_email">Invalid email</string>
    <string name="warning_empty_password">Fill password field</string>
    <string name="warning_password_min_length">Minimum password length is 8 characters</string>
    <string name="warning_password_mismatch">The passwords are not the same</string>
    <string name="warning_empty_name">Fill name field</string>
    <string name="warning_empty_surname">Fill surname field</string>
    <string name="warning_empty_date_of_birth">Fill date of birth field</string>
    <string name="warning_empty_residence">Fill residence field</string>
    <string name="warning_empty_favorite_number">Fill favorite number field</string>
    <string name="warning_empty_favorite_car">Fill favorite car field</string>
    <string name="warning_empty_favorite_circuit">Fill favorite circuit field</string>
    <string name="warning_empty_hated_circuit">Fill hated circuit field</string>
    <string name="warning_favorite_hated_circuits_equals">Favorite and Hated circuit must not be equals</string>
    <string name="warning_accept_eula">Accept terms &amp; conditions</string>

    <!-- Forgot Password -->
    <string name="recover_password_email_sent">Recovery email sent successfully</string>
    <string name="warning_email_not_found">Email not found</string>

    <!-- Account -->
    <string name="change_avatar">Change avatar</string>
    <string name="created_at">Created at&#160;</string>

    <!-- Championship-->
    <string name="championship_invalid">Invalid championship identifier</string>
    <string name="championship_not_found">Unable to find championship</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="view">View</string>
    <string name="subscribe_success">Successfully subscribed</string>
    <string name="unsubscribe_success">Successfully unsubscribed</string>

    <!-- Championships Photos -->
    <string name="championships_photos">Championships photos</string>

    <!-- Championship Photo -->
    <string name="championship_photos">Championship photos</string>
    <string name="no_photos">No photos found</string>
    <string name="share_photo">Share photo</string>

    <!-- Championship Ranking -->
    <string name="championship_not_started">Championship hasn\'t started yet</string>

    <!-- Admin Panel -->
    <string name="admin_panel">Admin panel</string>
    <string name="warning_no_admin_role">You don\'t have enough privileges</string>
    <string name="update_notification_title">Racer update</string>
    <string name="update_notification_game_setting">Game Setting update</string>
    <string name="update_notification_circuit">Circuit update</string>
    <string name="update_notification_user">Pilot update</string>
    <string name="warning_empty_value">Value cannot be empty</string>
    <string name="warning_same_value">Value has\'t changed</string>
    <string name="update_success">Updated successfully</string>

    <!-- Championship Subscribe Dialog -->
    <string name="warning_empty_car">Fill car field</string>
    <string name="warning_empty_team">Fill team field</string>

    <!-- Championship View Subscription Dialog -->
    <string name="subscription_update_success">Subscription successfully updated</string>

    <!-- Dialog Car -->
    <string name="choose_car">Choose a car</string>

    <!-- Dialog Circuit -->
    <string name="choose_circuit">Choose a circuit</string>

    <!-- Dialog Team -->
    <string name="choose_team">Choose a team</string>

    <!-- Success -->
    <string name="success_update">Updated successfully</string>

    <!-- Warning -->
    <string name="warning_unprocessable_entity">Unable to process entity due to properties: </string>
    <string name="warning_conflict">Conflict on properties: </string>

    <!-- Errors -->
    <string name="error_unknown">Unknown error</string>
    <string name="error_connection_timeout">The server is unreachable</string>
    <string name="error_conversion">Conversion error</string>
    <string name="error_internal_server_error">Internal server error</string>
</resources>
