<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <include
        android:id="@+id/sign_in_loader"
        layout="@layout/layout_loader"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <ImageView
                style="@style/Logo"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/sign_in_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:drawableEnd="@drawable/ic_user"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/sign_in_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:drawableEnd="@drawable/ic_lock"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_in_button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:drawableEnd="@drawable/ic_send"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/sign_in_button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account" />

            <Button
                android:id="@+id/sign_in_button_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>