<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_championships">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.unitn.disi.lpsmt.racer.ui.fragment.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_championships"
        android:name="com.unitn.disi.lpsmt.racer.ui.fragment.ChampionshipsFragment"
        android:label="@string/championships"
        tools:layout="@layout/fragment_championships">
        <action
            android:id="@+id/nav_championships_action_to_nav_championship"
            app:destination="@id/nav_championship" />
    </fragment>

    <fragment
        android:id="@+id/nav_championship"
        android:name="com.unitn.disi.lpsmt.racer.ui.fragment.ChampionshipFragment"
        android:label="@string/championship"
        tools:layout="@layout/fragment_championship">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

</navigation>