<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <include
        android:id="@+id/forgot_password_loader"
        layout="@layout/layout_loader"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <ImageView
                style="@style/Logo"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/forgot_password_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/forgot_password_button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_send"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>