<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_admin_circuits_dialog_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_admin_circuits_dialog_subscribe_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_cancel"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_admin_circuits_dialog_app_bar"
        android:padding="@dimen/padding_small"
        android:paddingTop="@dimen/padding_big"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/fragment_admin_circuits_dialog_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/circuits"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_huge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_big"
                        android:text="@string/championship"
                        android:textAlignment="textStart" />

                    <Spinner
                        android:id="@+id/fragment_admin_circuits_dialog_championship_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:enabled="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_big"
                        android:text="@string/circuit"
                        android:textAlignment="textStart" />

                    <Spinner
                        android:id="@+id/fragment_admin_circuits_dialog_circuits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:enabled="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_big"
                        android:text="@string/date"
                        android:textAlignment="textStart" />

                    <EditText
                        android:id="@+id/fragment_admin_circuits_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:clickable="true"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/unknown"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:textAlignment="center" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_admin_circuits_button_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_huge"
                        android:enabled="false"
                        android:text="@string/save"
                        android:textSize="@dimen/text_big"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:backgroundTint="@color/colorRed"
                        app:icon="@drawable/ic_save" />

                </LinearLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>